add dune opensea post

--- a/kunalm.xyz/_includes/layouts/base.njk
+++ b/kunalm.xyz/_includes/layouts/base.njk
@@ -63,5 +63,7 @@
 
       <footer></footer>
     </div>
+
+    <script defer data-domain="kunalm.xyz" src="https://plausible.io/js/plausible.js"></script>
   </body>
 </html>
