--- a/kunalm.xyz/_includes/layouts/prism.css
+++ b/kunalm.xyz/_includes/layouts/prism.css
@@ -1,161 +1,170 @@
 /**
- * Darcula theme
- *
- * Adapted from a theme based on:
- * IntelliJ Darcula Theme (https://github.com/bulenkov/Darcula)
- *
- * @author Alexandre Paradis <service.paradis@gmail.com>
- * @version 1.0
+ * VS theme by Andrew Lock (https://andrewlock.net)
+ * Inspired by Visual Studio syntax coloring
  */
 
  code[class*="language-"],
  pre[class*="language-"] {
-	 color: #a9b7c6;
-	 font-family: Consolas, Monaco, 'Andale Mono', monospace;
-	 direction: ltr;
-	 text-align: left;
-	 white-space: pre;
-	 word-spacing: normal;
-	 word-break: normal;
-	 line-height: 1.5;
+   color: #393A34;
+   font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+   direction: ltr;
+   text-align: left;
+   white-space: pre;
+   word-spacing: normal;
+   word-break: normal;
+   font-size: .9em;
+   line-height: 1.2em;
  
-	 -moz-tab-size: 4;
-	 -o-tab-size: 4;
-	 tab-size: 4;
+   -moz-tab-size: 4;
+   -o-tab-size: 4;
+   tab-size: 4;
  
-	 -webkit-hyphens: none;
-	 -moz-hyphens: none;
-	 -ms-hyphens: none;
-	 hyphens: none;
+   -webkit-hyphens: none;
+   -moz-hyphens: none;
+   -ms-hyphens: none;
+   hyphens: none;
+ }
+ 
+ pre > code[class*="language-"] {
+   font-size: 1em;
  }
  
  pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
  code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-	 color: inherit;
-	 background: rgba(33, 66, 131, .85);
+   background: #C1DEF1;
  }
  
  pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
  code[class*="language-"]::selection, code[class*="language-"] ::selection {
-	 color: inherit;
-	 background: rgba(33, 66, 131, .85);
+   background: #C1DEF1;
  }
  
  /* Code blocks */
  pre[class*="language-"] {
-	 padding: 1em;
+   padding: 1em;
 	 /* Kunal Note: Changed these */
 	 margin: 0.5em 0 1em 0;
-	 overflow: auto;
- }
- 
- :not(pre) > code[class*="language-"],
- pre[class*="language-"] {
-	 background: #2b2b2b;
+   overflow: auto;
+   border: 1px solid #dddddd;
+   background-color: white;
  }
  
  /* Inline code */
  :not(pre) > code[class*="language-"] {
-	 padding: .1em;
-	 border-radius: .3em;
+   padding: .2em;
+   padding-top: 1px;
+   padding-bottom: 1px;
+   background: #f8f8f8;
+   border: 1px solid #dddddd;
  }
  
  .token.comment,
  .token.prolog,
- .token.cdata {
-	 color: #808080;
- }
- 
- .token.delimiter,
- .token.boolean,
- .token.keyword,
- .token.selector,
- .token.important,
- .token.atrule {
-	 color: #cc7832;
- }
- 
- .token.operator,
- .token.punctuation,
- .token.attr-name {
-	 color: #a9b7c6;
- }
- 
- .token.tag,
- .token.tag .punctuation,
  .token.doctype,
- .token.builtin {
-	 color: #e8bf6a;
+ .token.cdata {
+   color: #008000;
+   font-style: italic;
  }
  
- .token.entity,
+ .token.namespace {
+   opacity: .7;
+ }
+ 
+ .token.string {
+   color: #A31515;
+ }
+ 
+ .token.punctuation,
+ .token.operator {
+   color: #393A34; /* no highlight */
+ }
+ 
+ .token.url,
+ .token.symbol,
  .token.number,
- .token.symbol {
-	 color: #6897bb;
- }
- 
- .token.property,
+ .token.boolean,
+ .token.variable,
  .token.constant,
- .token.variable {
-	 color: #9876aa;
+ .token.inserted {
+   color: #36acaa;
  }
  
- .token.string,
- .token.char {
-	 color: #6a8759;
- }
- 
+ .token.atrule,
+ .token.keyword,
  .token.attr-value,
- .token.attr-value .punctuation {
-	 color: #a5c261;
- }
- 
- .token.attr-value .punctuation:first-child {
-	 color: #a9b7c6;
- }
- 
- .token.url {
-	 color: #287bde;
-	 text-decoration: underline;
+ .language-autohotkey .token.selector,
+ .language-json .token.boolean,
+ .language-json .token.number,
+ code[class*="language-css"] {
+   color: #0000ff;
  }
  
  .token.function {
-	 color: #ffc66d;
+   color: #393A34;
  }
  
- .token.regex {
-	 background: #364135;
+ .token.deleted,
+ .language-autohotkey .token.tag {
+   color: #9a050f;
  }
  
+ .token.selector,
+ .language-autohotkey .token.keyword {
+   color: #00009f;
+ }
+ 
+ .token.important {
+   color: #e90;
+ }
+ 
+ .token.important,
  .token.bold {
-	 font-weight: bold;
+   font-weight: bold;
  }
  
  .token.italic {
-	 font-style: italic;
+   font-style: italic;
  }
  
- .token.inserted {
-	 background: #294436;
+ .token.class-name,
+ .language-json .token.property {
+   color: #2B91AF;
  }
  
- .token.deleted {
-	 background: #484a4a;
+ .token.tag,
+ .token.selector {
+   color: #800000;
  }
  
- code.language-css .token.property,
- code.language-css .token.property + .token.punctuation {
-	 color: #a9b7c6;
+ .token.attr-name,
+ .token.property,
+ .token.regex,
+ .token.entity {
+   color: #ff0000;
  }
  
- code.language-css .token.id {
-	 color: #ffc66d;
+ .token.directive.tag .tag {
+   background: #ffff00;
+   color: #393A34;
  }
  
- code.language-css .token.selector > .token.class,
- code.language-css .token.selector > .token.attribute,
- code.language-css .token.selector > .token.pseudo-class,
- code.language-css .token.selector > .token.pseudo-element {
-	 color: #ffc66d;
+ /* overrides color-values for the Line Numbers plugin
+  * http://prismjs.com/plugins/line-numbers/
+  */
+ .line-numbers.line-numbers .line-numbers-rows {
+   border-right-color: #a5a5a5;
+ }
+ 
+ .line-numbers .line-numbers-rows > span:before {
+   color: #2B91AF;
+ }
+ 
+ /* overrides color-values for the Line Highlight plugin
+ * http://prismjs.com/plugins/line-highlight/
+ */
+ .line-highlight.line-highlight {
+   background: rgba(193, 222, 241, 0.2);
+   background: -webkit-linear-gradient(left, rgba(193, 222, 241, 0.2) 70%, rgba(221, 222, 241, 0));
+   background: linear-gradient(to right, rgba(193, 222, 241, 0.2) 70%, rgba(221, 222, 241, 0));
  }
  
